SwapInitiation: fix spacing

--- a/src/components/SwapPairPanel/SwapPairPanel.scss
+++ b/src/components/SwapPairPanel/SwapPairPanel.scss
@@ -2,7 +2,7 @@
 
 .SwapPairPanel {
   $asset-horizontal-padding: 294px;
-  $panel-horizontal-padding: 60px;
+  $panel-horizontal-padding: 80px;
   position: relative;
 
   &_assetsBG {
