--- a/src/containers/CurrencyInputs/CurrencyInputs.scss
+++ b/src/containers/CurrencyInputs/CurrencyInputs.scss
@@ -1,7 +1,7 @@
 @import '../../scss/variables.scss';
 
 .CurrencyInputs {
-  $panel-spacing: 80px;
+  $panel-spacing: 60px;
   width: 100%;
 
   &_left {
