--- a/src/containers/SwapCompleted/SwapCompleted.scss
+++ b/src/containers/SwapCompleted/SwapCompleted.scss
@@ -2,6 +2,7 @@
 
 .SwapCompleted {
   position: relative;
+  top: -10px;
   $panel-spacing: 80px;
 
   .SwapPairPanel {
